# fgv-projetos

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/vespa/: services.xml
config/vespa/schemas/: crazyfrogger.sd
data/: experiment-results.csv  lyrics_queries.csv  queries.csv  results.csv
notebooks/: generate-queries.ipynb  langchain-test.ipynb  vespa-langchain-integration.ipynb
scripts/: deploy-vespa-app.py  deploy-vespa-cloud.py  evaluate-results.py  generate-embeddings.py  generate-index.py  generate-keys.py  generate-queries.py  results.txt  run-experiments.py  run-query.py  run-tests.py  run-tests.sh  server.py  test-model.py  tests.py  vespa_integration.py
scripts/utils/: data.py  embeddings.py  vespa.py
src/: index.py  main.py
web/: package-lock.json  package.json
web/src/assets/: main.scss
web/src/modules/home/: home-view.vue
web/src/router/: index.ts
