[tool.poetry]
name = "fgv-projetos"
version = "0.1.0"
description = ""
authors = ["Eduardo Adame <eadamesalles@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
transformers = "^4.38.2"
rank-bm25 = "^0.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
