[tool.poetry]
name = "fgv-projetos"
version = "0.1.0"
description = ""
authors = ["Eduardo Adame <eadamesalles@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
transformers = "^4.38.2"
rank-bm25 = "^0.2.2"
faiss-cpu = "^1.8.0"
langchain = "^0.1.15"
sentence-transformers = "^2.6.1"
ipykernel = "^6.29.4"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
